--- a/asserts/CSS/yespaceCss.css
+++ b/asserts/CSS/yespaceCss.css
@@ -21,3 +21,105 @@
 		 <svg class="icon" aria-hidden="true">
 		 	<use xlink:href="#icon-logo"></use>
 		 </svg>*/
+		 
+/*刘楠*/
+* {
+	margin: 0;
+	padding: 0;
+}
+
+/* 消息总界面 */
+span {
+	line-height: 125px;
+	font-weight: bold;
+	font-size: 40px;
+	margin-left: 30px;
+	vertical-align: 20px;
+}
+
+ul :hover {
+	background: var(--fColor);
+	color: white;
+}
+
+.list-header {
+	width: 100%;
+	border: 1px solid 0;
+	height: 125px;
+	padding-left: 30px;
+}
+
+.list-item {
+	list-style: none;
+	height: 125px;
+	width: 100%;
+	line-height: 100px;
+	border: 2px solid var(--fColor);
+	padding-left: 30px;
+	-moz-box-shadow: 0px 8px 20px #3333333a;
+	-webkit-box-shadow: 0px 8px 20px #3333333a;
+	box-shadow: 0px 8px 20px #3333333a;
+}
+
+.container {
+	width: 100%;
+	height: 100%;
+}
+
+/* 通知界面 */
+.container1 {
+	border: 0 solid black;
+	position: relative;
+	left: auto;
+	right: auto;
+	margin-left: 95px;
+	margin-right: 95px;
+}
+
+.dialog-box {
+	border: 0 solid black;
+	width: 100%;
+	/* height: 400px; */
+	border-radius: 75px;
+	background-color: var(--fColor);
+	margin-top: 100px;
+	display: inline-block;
+	-moz-box-shadow: 0px 8px 20px #3333333a;
+	-webkit-box-shadow: 0px 8px 20px #3333333a;
+	box-shadow: 0px 8px 20px #3333333a;
+}
+
+.circle {
+	width: 150px;
+	height: 150px;
+	background-color: #fff;
+	border-radius: 50%;
+	-moz-border-radius: 50%;
+	-webkit-border-radius: 50%;
+	position: relative;
+
+}
+
+.head-photo {
+	position: absolute;
+	z-index: 1;
+	top: 15px;
+	left: 15px;
+}
+
+.word {
+	float: left;
+	width: 72%;
+	/* height: 300px; */
+	margin: 45px 50px 45px 190px;
+	font-size: xx-large;
+	line-height: 50px;
+	position: relative;
+	color:#fff;
+}
+
+.word::after {
+	content: "";
+	display: block;
+	clear: both;
+}
