--- a/asserts/CSS/yespaceCss.css
+++ b/asserts/CSS/yespaceCss.css
@@ -121,7 +121,7 @@ span {
 	display: block;
 	clear: both;
 }
-/* 搜索页面 */
+/* 搜索页面 这里是傅文雅的CSS!*/
 {
 	margin: 0;
 	padding: 0;
@@ -266,8 +266,7 @@ li {
 .sxzl ul li a {
 	width: 175px;
 	height: 65px;
-	margin-left: 5px;
-	margin-top: 30px;
+	margin：0px auto;
 	text-align: center;
 	line-height: 65px;
 	display: inline-block;
@@ -312,54 +311,15 @@ li {
 	display:inline;/*--li本来是块级元素，这条css就使li变为内联（行内）元素，从而达到横向排列--*/
 	margin-bottom: 0px;
 }
-input[type=range]::-webkit-slider-thumb {
+/* input[type=range]::-webkit-slider-thumb {
 	-webkit-appearance: none;
 	/* 去除滑块的默认样式 */
 	/* margin-top: 300px; */
-	height: 100%;
+/* 	height: 100%;
 	width: 100px;
 	background: var(--fColor);
 	border-radius: 50 %;
-}
-/*#menus {
-	width: 100px;
-	border: 1px solid #cccccc;
-	margin-top: 20px;
-}*/
-
-/*#menus ul {
-	list-style: none;
-	margin: 0px;
-	padding: 0px;
-}*/
-
-/*#menus ul li {
-	background: #eeeeee;
-	padding: 0px 24px;
-	height: 26px;
-	line-height: 26px;
-	border-bottom: 1px solid #cccccc;
-	position: relative;
-}*/
-
-/*#menus ul li ul {
-	display: none;
-	border: 1px solid #cccccc;
-	border-bottom: none;
-	position: absolute;
-	left: 100px;
-	top: 0px;
-	width: 100px;
-}*/
-
-/*#menus ul li ul li {
-	background: #eeeeee;
-	padding: 0px 24px;
-	height: 26px;
-	line-height: 26px;
-	border-bottom: 1px solid #cccccc;
-	position: relative;
-}*/
+} */ */
 
 #menus ul li ul li ul {
 	display: none;
@@ -383,4 +343,30 @@ input[type=range]::-webkit-slider-thumb {
 
 #menus ul li ul li:hover ul {
 	display: block;
+}
+.centerarea{
+	
+	border: 10px solid #ccc;
+	margin:150px auto;
+	margin-top: 150px;
+	width: 60%;
+	height: 300px;
+	border-radius: 80px;
+	/* margin: 5% 5% 5% 5% ; */
+	overflow: hidden;
+}
+.leftfu {
+	position: absolute;
+	width:100px;
+	margin-left: 10px;
+	background:#fff;
+	height: 300px;
+	border-radius: 80px;
+}
+.leftfu ul li svg{
+	color:var(--fColor); 
+	float:left
+	opacity:1; 
+	font-size:40px;
+	margin-top: 20px;
 }
