--- a/asserts/CSS/yespaceCss.css
+++ b/asserts/CSS/yespaceCss.css
@@ -30,10 +30,10 @@
 
 /* 消息总界面 */
 span {
-	line-height: 125px;
+	/* line-height: 125px; */
 	font-weight: bold;
 	font-size: 40px;
-	margin-left: 30px;
+	/* margin-left: 30px; */
 	vertical-align: 20px;
 }
 .list-header {
@@ -122,7 +122,7 @@ span {
 	clear: both;
 }
 /* 搜索页面 这里是傅文雅的CSS!*/
-{
+*{
 	margin: 0;
 	padding: 0;
 }
@@ -206,7 +206,7 @@ li {
 	list-style: none;
 }
 
-/* 最高热度搜索 */
+/* 最高热度搜索 和 历史搜索*/
  .list-item2 {
 	float: left;
 	
@@ -252,7 +252,7 @@ li {
 .sxzl {
 	border: 0px solid #ccc;
 	border-right: none;
-	margin: 5% 5% 20% 10%;
+	margin: 5% 10% 20% 6%;
 	overflow: hidden;
 	float: left;
 	/* margin: 100px 0 0 300px; */
@@ -260,25 +260,25 @@ li {
 
 .sxzl ul li {
 	float: left;
-	margin-left: 5px;
+	margin-left: 0px;
 }
 
 .sxzl ul li a {
 	width: 175px;
 	height: 65px;
-	margin：0px auto;
+	margin-right: 5px;
+	margin-top: 30px;
 	text-align: center;
 	line-height: 65px;
 	display: inline-block;
-	border-right: 0px solid #ccc;
-	background: #eee;
-	border-radius: 10px;
-	color: #000;
+	border-right: 4px solid #EEEEEE;
+	background: #eeeeee;
+	color:#4C51B1;
 }
 
-.sxzl ul li a:hover {
-	color: var(--fColor);
-}
+/*#menu2 ul li a{
+	border-radius: 15px;
+}*/
 b {
 	position: absolute;
 	top: 90px;
@@ -325,6 +325,7 @@ b {
 	background:#FFFFFF ;
 	color: #4C51B1;
 }
+
 .sxzl ul li ul {
 	position: absolute;
 	display: none;
@@ -336,48 +337,82 @@ b {
 
 .sxzl ul li ul li a {
 	font-size: 35px;
-	margin-top: 5px;
-	border-right: none;
-	border-top: 1px dotted #ccc;
+	margin-top: 0px;
+	border-right: 0px;
+	border-top: 0px dotted #ccc;
 	background: #f5f5f5;
+	border: 2px solid #4C51B1;
+	position: relative;
 }
 
 .sxzl ul li:hover ul {
 	display: block;
+	
 }
 
 .sxzl ul li ul li:hover ul {
 	display: block;
 }
-.bottom ul li{
-	width:196px;
-	float:left;
-	height:33px;
-	display:inline;/*--li本来是块级元素，这条css就使li变为内联（行内）元素，从而达到横向排列--*/
-	margin-bottom: 0px;
-}
-/* input[type=range]::-webkit-slider-thumb {
+
+input[type=range]::-webkit-slider-thumb {
 	-webkit-appearance: none;
 	/* 去除滑块的默认样式 */
 	/* margin-top: 300px; */
-/* 	height: 100%;
+	height: 100%;
 	width: 100px;
 	background: var(--fColor);
 	border-radius: 50 %;
-} */ */
+}
+/*#menus {
+	width: 100px;
+	border: 1px solid #cccccc;
+	margin-top: 20px;
+}*/
+
+/*#menus ul {
+	list-style: none;
+	margin: 0px;
+	padding: 0px;
+}*/
+
+/*#menus ul li {
+	background: #eeeeee;
+	padding: 0px 24px;
+	height: 26px;
+	line-height: 26px;
+	border-bottom: 1px solid #cccccc;
+	position: relative;
+}*/
+
+/*#menus ul li ul {
+	display: none;
+	border: 1px solid #cccccc;
+	border-bottom: none;
+	position: absolute;
+	left: 100px;
+	top: 0px;
+	width: 100px;
+}*/
+
+/*#menus ul li ul li {
+	background: #eeeeee;
+	padding: 0px 24px;
+	height: 26px;
+	line-height: 26px;
+	border-bottom: 1px solid #cccccc;
+	position: relative;
+}*/
 
 #menus ul li ul li ul {
 	display: none;
 	border-bottom: none;
 	position: relative;
-	left: 180px;
+	/*left: 100px;*/
 	top: 0px;
 	width: 100px;
-	
-	/*margin-left: 100px;
-	margin-top: 50px;*/
+	/*margin-left: 80px;
+	margin-top: 70px;*/
 }
-
 #menus ul li:hover ul li ul {
 	display: none;
 }
