--- a/asserts/CSS/yespaceCss.css
+++ b/asserts/CSS/yespaceCss.css
@@ -3,7 +3,6 @@
 	--fColor: #4C51B1;
 	--sColor: #6D6D6D;
 }
-/* 使用方法var(--fColor); */
 
 /* 使用方法var(--fColor); */
 .footer-zhe {
@@ -61,18 +60,36 @@
 	top: 0;
 	z-index: 1020;
 }
-.partnerLogo { 
-/*    width: 100%; 
+
+.partnerLogo {
+	/*    width: 100%; 
     height: 100px; */
-    stroke: white; 
-    fill: white;
-} 
+	stroke: white;
+	fill: white;
+}
+
 /* 布局CSS */
 /* Div水平垂直居中 */
-.father{position:fixed;width:100%;height:100%;top:0;left:0;}
-.son{position: absolute;top:0;left:0;bottom:0;right:0;width:50%;height:50%;margin:auto;}
+.father {
+	position: fixed;
+	width: 100%;
+	height: 100%;
+	top: 0;
+	left: 0;
+}
 
-.index-zhe{
+.son {
+	position: absolute;
+	top: 0;
+	left: 0;
+	bottom: 0;
+	right: 0;
+	width: 50%;
+	height: 50%;
+	margin: auto;
+}
+
+.index-zhe {
 	background-color: white;
 	border-radius: 3vw;
 }
@@ -86,12 +103,13 @@
 	overflow: hidden;
 	color: var(--fColor);
 }
+
 /* 		<!-- Iconfont矢量图标库 -->
 		<script src="http://at.alicdn.com/t/font_1306353_exkcfta643.js" type="text/javascript"></script>
 		 <svg class="icon" aria-hidden="true">
 		 	<use xlink:href="#icon-logo"></use>
 		 </svg>*/
-		 
+
 /*刘楠*/
 * {
 	margin: 0;
@@ -106,6 +124,7 @@ span {
 	/* margin-left: 30px; */
 	vertical-align: 20px;
 }
+
 .list-header {
 	width: 100%;
 	border: 1px solid 0;
@@ -120,22 +139,20 @@ span {
 	line-height: 100px;
 	border: 2px solid var(--fColor);
 	padding-left: 30px;
-	-moz-box-shadow: 0px 8px 20px #3333333a;
-	-webkit-box-shadow: 0px 8px 20px #3333333a;
-	box-shadow: 0px 8px 20px #3333333a;
 }
+
 .list-item:hover {
 	background: var(--fColor);
 	color: white;
-} 
+}
 
 .container-liu {
 	width: 100%;
 	height: 100%;
 }
 
-/* 通知界面 */
-.container1-liu {
+/* 通知界面Message-inform */
+.container-inform-liu {
 	border: 0 solid black;
 	position: relative;
 	left: auto;
@@ -146,15 +163,11 @@ span {
 
 .dialog-box {
 	border: 0 solid black;
-	width: 100%;
-	/* height: 400px; */
+	/* width: 100%; */
 	border-radius: 75px;
 	background-color: var(--fColor);
 	margin-top: 100px;
 	display: inline-block;
-	-moz-box-shadow: 0px 8px 20px #3333333a;
-	-webkit-box-shadow: 0px 8px 20px #3333333a;
-	box-shadow: 0px 8px 20px #3333333a;
 }
 
 .circle {
@@ -165,7 +178,6 @@ span {
 	-moz-border-radius: 50%;
 	-webkit-border-radius: 50%;
 	position: relative;
-
 }
 
 .head-photo {
@@ -178,12 +190,11 @@ span {
 .word {
 	float: left;
 	width: 72%;
-	/* height: 300px; */
 	margin: 45px 50px 45px 190px;
 	font-size: xx-large;
 	line-height: 50px;
 	position: relative;
-	color:#fff;
+	color: #fff;
 }
 
 .word::after {
@@ -191,13 +202,18 @@ span {
 	display: block;
 	clear: both;
 }
-/* 搜索页面 这里是傅文雅的CSS!*/
-*{
-	margin: 0;
-	padding: 0;
+
+/* 个人对话框Message-dialog */
+.container-dialog-liu{
+	border: 1px solid black;
+	position: relative;
+	left: auto;
+	right: auto;
+	width: 100%;
 }
 
-background-color: var(--fColor);
+
+/* 搜索页面 这里是傅文雅的CSS!*/
 
 li {
 	list-style: none;
@@ -208,10 +224,10 @@ a {
 }
 
 /* 搜索框设置 */
-.searcontent clearfix {
+.searcontent {
 	width: 100%;
-	height: 100px;
-	background-color: #CCCCCC;
+	/* height: 100px; */
+	background-color: white;
 	border: solid 1px #ccc;
 	/* 	position: -ms-device-fixed; */
 	/* 	position: sticky;
@@ -233,7 +249,7 @@ a {
 	border-top-right-radius: 100px;
 	outline: none;
 }
-}
+
 .list-item2 a {
 	padding: 0 20px;
 	color: var(--fColor);
@@ -281,12 +297,6 @@ a {
 
 }
 
-.icon .item1 a:hover {
-	background-color: #6D6D6D14;
-	color: #fff;
-
-}
-
 .icon .item2 a {
 	padding: 25px 10px 0 10px;
 	height: 100px;
@@ -294,6 +304,23 @@ a {
 	/*把a变成行级块*/
 
 }
+
+.list-item2 a:hover {
+	background-color: var(--fColor);
+	color: #fff;
+}
+
+.sxzl ul li a:hover {
+	color: var(--fColor);
+}
+
+.icon .item1 a:hover {
+	background-color: #6D6D6D14;
+	color: #fff;
+
+}
+
+
 
 .icon .item2 a:hover {
 	background-color: #6D6D6D14;
@@ -318,7 +345,6 @@ li {
 
 .list-item2 {
 	float: left;
-	
 	list-style: none;
 	font-size: 20px;
 	/* margin-left: 20%; */
@@ -326,35 +352,6 @@ li {
 	height: 30px;
 	line-height: 30px;
 	/* border:1px solid black;显示黑色边框 */
-}
-
-.list-item2 a {
-	padding: 0 20px;
-	color: var(--fColor);
-	font-weight: bold;
-	margin-bottom: 20px;
-	height: 60px; 
-	background: #6D6D6D14;
-	display: inline-block;
-	/*把a变成行级块*/
-	border-radius: 10px;
-	text-decoration: none;
-	text-align: center;
-	line-height: 60px;
-	margin-bottom: 5px;
-}
-
-.box-shadow-vertical {
-	-moz-box-shadow: 0px 6px 10px #3333333C;
-	-webkit-box-shadow: 0px 6px 10px #3333333C;
-	box-shadow: 0px 6px 10px #3333333C;
-	margin-bottom: 100px;
-}
-
-/*当鼠标移动会变色：*/
-.list-item2 a:hover {
-	background-color: var(--fColor);
-	color: #fff;
 }
 
 /* 筛选种类 设置*/
@@ -372,13 +369,13 @@ li {
 	margin-left: 0px;
 }
 
+
 .sxzl ul li a {
 	width: 175px;
 	height: 65px;
-
 	margin-right: 5px;
 	margin-top: 30px;
-	
+	margin: 0px auto;
 	text-align: center;
 	line-height: 65px;
 	display: inline-block;
@@ -390,6 +387,7 @@ li {
 /*#menu2 ul li a{
 	border-radius: 15px;
 }*/
+
 b {
 	position: absolute;
 	top: 90px;
@@ -400,23 +398,17 @@ b {
 	border-style: solid dashed dashed;
 	border-color: #FFFFFF transparent transparent;
 }
-.trf:hover{
+
+.trf:hover {
 	border-color: #4C51B1 transparent transparent;
 	transform: rotate(180deg);
 	transform-origin: 50% 25%;
 	transition: transform .2s ease-in;
-}
-.trf:hover{
 	display: block;
 }
-#sortout:hover{
-	background-color: #4C51B1;
-	color: #FFFFFF;
-	border-right: 4px solid #4C51B1;
-	border-top-left-radius: 10px;
-	border-top-right-radius: 10px;
-}
-#lowers:hover{
+
+
+#sortout:hover {
 	background-color: #4C51B1;
 	color: #FFFFFF;
 	border-right: 4px solid #4C51B1;
@@ -424,17 +416,38 @@ b {
 	border-top-right-radius: 10px;
 }
 
+#lowers:hover {
+	background-color: #4C51B1;
+	color: #FFFFFF;
+	border-right: 4px solid #4C51B1;
+	border-top-left-radius: 10px;
+	border-top-right-radius: 10px;
+}
+
+#food,
+#botm {
 	border-bottom-left-radius: 10px;
 	border-bottom-right-radius: 10px;
 }
+
 #menu1 ul li a {
 	background: #4C51B1;
-	color:#FFFFFF;
+	color: #FFFFFF;
 	position: relative;
 }
-#menu1 ul li  a:hover{
-	background:#FFFFFF ;
+
+#menu1 ul li a:hover {
+	background: #FFFFFF;
 	color: #4C51B1;
+}
+
+.bottom ul li {
+	width: 196px;
+	float: left;
+	height: 33px;
+	display: inline;
+	/*--li本来是块级元素，这条css就使li变为内联（行内）元素，从而达到横向排列--*/
+	margin-bottom: 0px;
 }
 
 .sxzl ul li ul {
@@ -462,7 +475,7 @@ b {
 
 .sxzl ul li:hover ul {
 	display: block;
-	
+
 }
 
 .sxzl ul li ul li:hover ul {
@@ -530,7 +543,9 @@ b {
 	border-bottom: 1px solid #cccccc;
 	position: relative;
 }*/
+
 	#menus ul li ul li ul {
+
 		display: none;
 		border-bottom: none;
 		position: relative;
@@ -552,13 +567,15 @@ b {
 	}
 
 
+
 	#menus ul li ul li:hover ul {
 		display: block;
 	}
 
 	/* 搜索结果为电脑展开前的界面 */
 	.centerarea {
-border: 10px solid #ccc;
+
+		border: 10px solid #ccc;
 		margin: 150px auto;
 		margin-top: 150px;
 		width: 60%;
@@ -567,16 +584,23 @@ border: 10px solid #ccc;
 		/* margin: 5% 5% 5% 5% ; */
 		overflow: hidden;
 	}
-		
 
-.leftfu2 ul li svg{
-	color:var(--fColor); 
-	float:left;
-	opacity:1; 
-	font-size:50px;
-	margin-left: 10px;
-	margin-top: 20px;
-}
+	.leftfu {
+		position: absolute;
+		width: 100px;
+		margin-left: 10px;
+		background: #fff;
+		height: 300px;
+		border-radius: 80px;
+	}
+
+	.leftfu ul li svg {
+		color: var(--fColor);
+		float: left;
+		opacity: 1;
+		font-size: 40px;
+		margin-top: 20px;
+	}
 
 	.middlefu {
 		position: absolute;
@@ -584,14 +608,7 @@ border: 10px solid #ccc;
 		width: 400px;
 		/* background:#0f0; */
 		margin-left: 10px;
-	}.middlefu2 img{
-	height:200px ;
-	width: 300px;
-	/* margin-top:90px ; */
-	margin-bottom: 10px;
-}
-input[type=checkbox] {
--webkit-transform: scale(1.5); /* Safari and Chrome */
+	}
 
 	.middlefu img {
 		height: 200px;
@@ -599,4 +616,10 @@ input[type=checkbox] {
 		margin-top: 90px;
 	}
 
-	
+	.rightfu {
+		position: absolute;
+		left: 1000px;
+		width: 390px;
+		background: #000;
+		margin-left: 10px;
+	}
