--- a/asserts/CSS/yespaceCss.css
+++ b/asserts/CSS/yespaceCss.css
@@ -214,8 +214,14 @@ span {
 
 
 /* 搜索页面 这里是傅文雅的CSS!*/
+*{
+	margin: 0;
+	padding: 0;
+}
 
-li {
+background-color: var(--fColor);
+
+ul,li {
 	list-style: none;
 }
 
@@ -224,15 +230,15 @@ a {
 }
 
 /* 搜索框设置 */
-.searcontent {
+.searcontent clearfix {
 	width: 100%;
-	/* height: 100px; */
-	background-color: white;
+	height: 100px;
+	background-color: #CCCCCC;
 	border: solid 1px #ccc;
-	/* 	position: -ms-device-fixed; */
-	/* 	position: sticky;
-	top: 0;
-	z-index: 1020; */
+	margin-bottom: 25pxs;
+	position: fixed;
+	top: 0px;
+	z-index: 1000;
 }
 
 /* 搜索框设置 */
@@ -250,50 +256,18 @@ a {
 	outline: none;
 }
 
-.list-item2 a {
-	padding: 0 20px;
-	color: var(--fColor);
-	font-weight: bold;
-	margin-bottom: 20px;
-	height: 60px;
-	background: #6D6D6D14;
-	display: inline-block;
-	/*把a变成行级块*/
-	border-radius: 10px;
-	text-decoration: none;
-	text-align: center;
-	line-height: 60px;
-	/* margin-bottom: 5px; */
-}
-
-/*当鼠标移动会变色：*/
-.sxzl ul li a {
-	width: 175px;
-	height: 65px;
-	margin: 0px auto;
-	text-align: center;
-	line-height: 65px;
-	display: inline-block;
-	border-right: 0px solid #ccc;
-	background: #eee;
-	border-radius: 10px;
-	color: #000;
-}
-
-.sxzl ul li ul li a {
-	font-size: 35px;
-	margin-top: 5px;
-	border-right: none;
-	border-top: 1px dotted #ccc;
-	background: #f5f5f5;
-}
-
 /* 引入按钮 设置 */
 .icon .item1 a {
 	padding: 25px 10px 0 10px;
 	height: 100px;
 	display: inline-block;
 	/*把a变成行级块*/
+
+}
+
+.icon .item1 a:hover {
+	background-color: #6D6D6D14;
+	color: #fff;
 
 }
 
@@ -304,23 +278,6 @@ a {
 	/*把a变成行级块*/
 
 }
-
-.list-item2 a:hover {
-	background-color: var(--fColor);
-	color: #fff;
-}
-
-.sxzl ul li a:hover {
-	color: var(--fColor);
-}
-
-.icon .item1 a:hover {
-	background-color: #6D6D6D14;
-	color: #fff;
-
-}
-
-
 
 .icon .item2 a:hover {
 	background-color: #6D6D6D14;
@@ -341,10 +298,10 @@ li {
 	list-style: none;
 }
 
-/* 最高热度搜索 */
-
-.list-item2 {
+/* 最高热度搜索 和 历史搜索*/
+ .list-item2 {
 	float: left;
+	
 	list-style: none;
 	font-size: 20px;
 	/* margin-left: 20%; */
@@ -352,6 +309,35 @@ li {
 	height: 30px;
 	line-height: 30px;
 	/* border:1px solid black;显示黑色边框 */
+}
+
+.list-item2 a {
+	padding: 0 20px;
+	color: var(--fColor);
+	font-weight: bold;
+	margin-bottom: 20px;
+	height: 60px; 
+	background: #6D6D6D14;
+	display: inline-block;
+	/*把a变成行级块*/
+	border-radius: 10px;
+	text-decoration: none;
+	text-align: center;
+	line-height: 60px;
+	margin-bottom: 5px;
+}
+
+.box-shadow-vertical {
+	-moz-box-shadow: 0px 6px 10px #3333333C;
+	-webkit-box-shadow: 0px 6px 10px #3333333C;
+	box-shadow: 0px 6px 10px #3333333C;
+	margin-bottom: 100px;
+}
+
+/*当鼠标移动会变色：*/
+.list-item2 a:hover {
+	background-color: var(--fColor);
+	color: #fff;
 }
 
 /* 筛选种类 设置*/
@@ -369,25 +355,24 @@ li {
 	margin-left: 0px;
 }
 
-
 .sxzl ul li a {
 	width: 175px;
 	height: 65px;
 	margin-right: 5px;
 	margin-top: 30px;
-	margin: 0px auto;
+
+	margin:0px auto;
 	text-align: center;
 	line-height: 65px;
 	display: inline-block;
 	border-right: 4px solid #EEEEEE;
 	background: #eeeeee;
-	color: #4C51B1;
+	color:#4C51B1;
 }
 
 /*#menu2 ul li a{
 	border-radius: 15px;
 }*/
-
 b {
 	position: absolute;
 	top: 90px;
@@ -398,56 +383,41 @@ b {
 	border-style: solid dashed dashed;
 	border-color: #FFFFFF transparent transparent;
 }
-
-.trf:hover {
+.trf:hover{
 	border-color: #4C51B1 transparent transparent;
 	transform: rotate(180deg);
 	transform-origin: 50% 25%;
 	transition: transform .2s ease-in;
+}
+.trf:hover{
 	display: block;
 }
-
-
-#sortout:hover {
+#sortout:hover{
 	background-color: #4C51B1;
 	color: #FFFFFF;
 	border-right: 4px solid #4C51B1;
 	border-top-left-radius: 10px;
 	border-top-right-radius: 10px;
 }
-
-#lowers:hover {
+#lowers:hover{
 	background-color: #4C51B1;
 	color: #FFFFFF;
 	border-right: 4px solid #4C51B1;
 	border-top-left-radius: 10px;
 	border-top-right-radius: 10px;
 }
-
-#food,
-#botm {
+#food,#botm {
 	border-bottom-left-radius: 10px;
 	border-bottom-right-radius: 10px;
 }
-
 #menu1 ul li a {
 	background: #4C51B1;
-	color: #FFFFFF;
+	color:#FFFFFF;
 	position: relative;
 }
-
-#menu1 ul li a:hover {
-	background: #FFFFFF;
+#menu1 ul li  a:hover{
+	background:#FFFFFF ;
 	color: #4C51B1;
-}
-
-.bottom ul li {
-	width: 196px;
-	float: left;
-	height: 33px;
-	display: inline;
-	/*--li本来是块级元素，这条css就使li变为内联（行内）元素，从而达到横向排列--*/
-	margin-bottom: 0px;
 }
 
 .sxzl ul li ul {
@@ -459,9 +429,6 @@ b {
 	float: none;
 }
 
-
-
-
 .sxzl ul li ul li a {
 	font-size: 35px;
 	margin-top: 0px;
@@ -472,154 +439,151 @@ b {
 	position: relative;
 }
 
-
 .sxzl ul li:hover ul {
 	display: block;
-
+	
 }
 
 .sxzl ul li ul li:hover ul {
 	display: block;
 }
 
-
-
-/* input[type=range]::-webkit-slider-thumb {
+input[type=range]::-webkit-slider-thumb {
 	-webkit-appearance: none;
 	/* 去除滑块的默认样式 */
-/* margin-top: 300px; */
-/* 	height: 100%;
+	/* margin-top: 300px; */
+	height: 100%;
 	width: 100px;
 	background: var(--fColor);
 	border-radius: 50 %;
-} */
+}
+
+
 #menus ul li ul li ul {
-	input[type=range]::-webkit-slider-thumb {
-		-webkit-appearance: none;
-		/* 去除滑块的默认样式 */
-		/* margin-top: 300px; */
-		height: 100%;
-		width: 100px;
-		background: var(--fColor);
-		border-radius: 50 %;
-	}
-
-	/*#menus {
-	width: 100px;
-	border: 1px solid #cccccc;
-	margin-top: 20px;
-}*/
-
-	/*#menus ul {
-	list-style: none;
-	margin: 0px;
-	padding: 0px;
-}*/
-
-	/*#menus ul li {
-	background: #eeeeee;
-	padding: 0px 24px;
-	height: 26px;
-	line-height: 26px;
-	border-bottom: 1px solid #cccccc;
-	position: relative;
-}*/
-
-	/*#menus ul li ul {
 	display: none;
-	border: 1px solid #cccccc;
 	border-bottom: none;
-	position: absolute;
-	left: 100px;
+	position: relative;
+	/*left: 100px;*/
 	top: 0px;
 	width: 100px;
-}*/
+	/*margin-left: 80px;
+	margin-top: 70px;*/
+}
+#menus ul li:hover ul li ul {
+	display: none;
+}
 
-	/*#menus ul li ul li {
-	background: #eeeeee;
-	padding: 0px 24px;
-	height: 26px;
-	line-height: 26px;
-	border-bottom: 1px solid #cccccc;
-	position: relative;
-}*/
+#menus ul li:hover ul {
+	display: block;
+}
 
-	#menus ul li ul li ul {
+#menus ul li ul li:hover ul {
+	display: block;
+}
 
-		display: none;
-		border-bottom: none;
-		position: relative;
-		/*left: 100px;*/
-		top: 0px;
-		width: 100px;
+/* 搜索结果为电脑展开前的界面 */
+.centerarea{
+	
+	border: 1px solid #ccc;
+	/* margin:150px auto; */
+	width: 80%;
+	height: 330px;
+	border-radius: 80px;
+	margin: 5% 5% 5% 5% ;
+	overflow: hidden;
+}
+.leftfu {
+	position: absolute;
+	width:20%;
+	margin-left: 10px;
+	background:#fff;
+	height: 280px;
+	border-radius: 80px;
+	margin-top: 40px;
+}
+.leftfu ul li svg{
+	color:var(--fColor); 
+	float:left;
+	opacity:1; 
+	font-size:50px;
+	/* margin-top: 20px; */
+}
 
+.middlefu {
+	position: absolute;
+	/* left:500px; */
+	width:40%;
+	margin-left:150px;
+}
+.middlefu img{
+	height:200px ;
+	width: 300px;
+	margin-top:90px ;
+}
+.rightfu{
+	position: absolute;
+	margin-top: 90px;
+	left:920px;
+	height: 200px;
+	width: 40%;
+	/* background:#666; */
+	margin-left:10px;
+	font-size:30px;
+}
+.chakanfu{
+	font-size: 20px;
+	background:#666;
+	border-radius: 80px;
+}
+.centerarea2{
+	
+	border: 1px solid #ccc;
+	/* position: relative; */
+	/* float: left; */
+	margin:100px auto;
+	/* margin-top: 100px; */
+	width: 70%;
+	min-height:200px;
+	height: 1100px;
+	border-radius: 80px;
+	margin: 5% 5% 5% 5% ;
+	overflow: hidden;
+}
+.leftfu2 {
+	position: absolute;
+	width:20%;
+	margin-left: 10px;
+	background:#fff;
+	height: 280px;
+	border-radius: 80px;
+	margin-top: 40px;
+}
+.leftfu2 ul li svg{
+	color:var(--fColor); 
+	float:left;
+	opacity:1; 
+	font-size:50px;
+	margin-left: 10px;
+	margin-top: 20px;
+}
 
-		/*margin-left: 100px;
-	margin-top: 50px;*/
-	}
+.middlefu2 {
+	position: absolute;
+	/* left:500px; */
+	width:60%;
+	margin-left:150px;
+	margin-top: 90px;
+	font-size: 30px;
+	
+}
+.middlefu2 img{
+	height:200px ;
+	width: 300px;
+	/* margin-top:90px ; */
+	margin-bottom: 10px;
+}
+input[type=checkbox] {
+-webkit-transform: scale(1.5); /* Safari and Chrome */
 
-	#menus ul li:hover ul {
-		display: block;
-	}
-
-	#menus ul li:hover ul li ul {
-		display: none;
-	}
-
-
-
-	#menus ul li ul li:hover ul {
-		display: block;
-	}
-
-	/* 搜索结果为电脑展开前的界面 */
-	.centerarea {
-
-		border: 10px solid #ccc;
-		margin: 150px auto;
-		margin-top: 150px;
-		width: 60%;
-		height: 400px;
-		border-radius: 80px;
-		/* margin: 5% 5% 5% 5% ; */
-		overflow: hidden;
-	}
-
-	.leftfu {
-		position: absolute;
-		width: 100px;
-		margin-left: 10px;
-		background: #fff;
-		height: 300px;
-		border-radius: 80px;
-	}
-
-	.leftfu ul li svg {
-		color: var(--fColor);
-		float: left;
-		opacity: 1;
-		font-size: 40px;
-		margin-top: 20px;
-	}
-
-	.middlefu {
-		position: absolute;
-		left: 550px;
-		width: 400px;
-		/* background:#0f0; */
-		margin-left: 10px;
-	}
-
-	.middlefu img {
-		height: 200px;
-		width: 200px;
-		margin-top: 90px;
-	}
-
-	.rightfu {
-		position: absolute;
-		left: 1000px;
-		width: 390px;
-		background: #000;
-		margin-left: 10px;
-	}
+}
+	
