--- a/asserts/CSS/yespaceCss.css
+++ b/asserts/CSS/yespaceCss.css
@@ -26,17 +26,18 @@
 	left: 0px;
 	bottom: 0px;
 	width: 100%;
-	height: 10rem;
+	height:8vw;
 	background-color: white;
 	display: flex;
 	justify-content: center;
+	/* filter不规则图形模糊样式 */
 	filter: drop-shadow(0px -1px 11px #33333333)
 }
 
 .footer-bot:before {
 	bottom: 0;
-	width: 15rem;
-	height: 15rem;
+	width: 12vw;
+	height: 12vw;
 	content: "";
 	background-color: white;
 	border-radius: 50%;
