--- a/asserts/CSS/yespaceCss.css
+++ b/asserts/CSS/yespaceCss.css
@@ -3,7 +3,6 @@
 	--fColor: #4C51B1;
 	--sColor: #6D6D6D;
 }
-
 /* 使用方法var(--fColor); */
 .footer-zhe {
 	position: sticky;
@@ -183,7 +182,6 @@ span {
 
 .head-photo {
 	position: absolute;
-	z-index: 1;
 }
 .bell-liu{
 	font-size: 104px;
@@ -230,7 +228,37 @@ span {
 		border-radius: 50%;
 		background-size: contain;
 }
-
+.bottom-liu{
+	/* position: relative; */
+	bottom: 0px;
+	position: sticky;
+	/* position: sticky;
+	position: relative;
+	left: 0px;
+	bottom: 0px;
+	width: 100%;
+	height:8vw;
+	background-color: white;
+	display: flex;
+	justify-content: center;
+	filter不规则图形模糊样式
+	filter: drop-shadow(0px -1px 11px #33333333) */
+}
+.input-liu{
+	border-radius: 40%;
+	position: absolute;
+    bottom: 0;
+    left: 50%;
+    transform: translate(-50%, -50%);
+	width: 80%;
+	height:8vw;
+	background-color: white;
+	border: 0 solid black;
+	border-radius: 60px;
+	background-color: var(--fColor);
+	margin-top: 100px;
+	/* display: inline-block; */
+}
 /* 搜索页面 这里是傅文雅的CSS!*/
 ul,li {
 	list-style: none;
