--- a/asserts/CSS/yespaceCss.css
+++ b/asserts/CSS/yespaceCss.css
@@ -14,7 +14,11 @@
 	background-color: white;
 	z-index: 9999;
 }
-
+.container-zhe{
+	width: 100%;
+	height: 100%;
+	overflow: auto;
+}
 .background-footer {
 	background-color: white;
 
@@ -33,7 +37,9 @@
 	/* filter不规则图形模糊样式 */
 	filter: drop-shadow(0px -1px 11px #33333333)
 }
-
+.container-bar-index{
+	margin-bottom: 12vw;
+}
 .footer-bot:before {
 	bottom: 0;
 	width: 12vw;
