--- a/asserts/CSS/yespaceCss.css
+++ b/asserts/CSS/yespaceCss.css
@@ -15,6 +15,12 @@
 	z-index: 9999;
 }
 
+/* 加载中默认颜色 */
+.progress-zhe {
+	fill: var(--fColor);
+	width: 100%;
+}
+
 .container-zhe {
 	width: 100%;
 	height: 100%;
@@ -60,6 +66,13 @@ input[type='checkbox'] {
 	vertical-align: bottom;
 }
 
+/* 通知样式 */
+.tip-css {
+	color: var(--fColor);
+	font-size: 3vw;
+	font-weight: bold;
+	overflow: auto;
+}
 
 /* 阴影 */
 .shadow {
@@ -111,6 +124,36 @@ input[type='checkbox'] {
 	height: 50%;
 	margin: auto;
 }
+
+/* 自定义滚动条 */
+.box {
+	float: left;
+	width: 150px;
+	height: 250px;
+	margin: 0 40px 40px 0;
+	border: 1px solid #eee;
+}
+
+.box6 {
+	overflow-y: scroll;
+}
+
+.box6::-webkit-scrollbar {
+	width: 10px;
+}
+
+.box6::-webkit-scrollbar-track {
+	border-radius: 5px;
+	background-color: white;
+	/* border: 1px solid var(--fColor); */
+}
+
+.box6::-webkit-scrollbar-thumb {
+	border-radius: 5px;
+	background: var(--fColor);
+}
+
+
 
 .index-zhe {
 	background-color: white;
@@ -540,7 +583,7 @@ input[type=range]::-webkit-slider-thumb {
 	/* margin: 100px auto; */
 	width: 70%;
 	border-radius: 80px;
-	margin:5%;
+	margin: 5%;
 	overflow: hidden;
 }
 
