--- a/asserts/CSS/yespaceCss.css
+++ b/asserts/CSS/yespaceCss.css
@@ -310,7 +310,7 @@ span {
 	left: 0px;
 	bottom: 0px;
 	width: 100%;
-	height: 26vw;
+	/* height: 26vw; */
 	background-color: white;
 	display: flex;
 	justify-content: center;
@@ -319,23 +319,21 @@ span {
 }
 
 .input-liu {
-	border-radius: 40%;
-	position: absolute;
-	bottom: 0;
-	left: 45%;
-	transform: translate(-50%, -50%);
-	width: 80%;
+	/* position: absolute; */
+	/* bottom: 0; */
+	/* left: 45%; */
+	/* transform: translate(-50%, -50%); */
+	width: 100%;
 	height: 8vw;
 	background-color: white;
 	border: 0 solid black;
-	border-radius: 60px;
+	border-radius: 100px;
 	display: inline-block;
-	margin-top: 100px;
+	/* margin-top: 100px; */
 }
 
 /* 搜索页面 这里是傅文雅的CSS!*/
-ul,
-li {
+ul,li {
 	list-style: none;
 }
 
